crates/asm816_core/tests/golden/errors-on-repeated-org.err
Error: single-origin mode allows only one `.org`
   ╭─[ 0:2:1 ]
   │
 2 │ .org $9000
   │ ─────┬────  
   │      ╰────── single-origin mode allows only one `.org`
───╯
